# finax

./: .env.example  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: development.md  index.md
docs/architecture/: overview.md
docs/architecture/agents/: alert.md  analyst.md  scout.md
docs/getting-started/: configuration.md  installation.md
docs/reference/: config.md  scheduler.md  state.md
src/finax/: __init__.py  config.py  graph.py  main.py  scheduler.py  state.py
src/finax/agents/: alert.py  analyst.py  scout.py
