[project]
name = "finax"
version = "0.1.0"
description = "Autonomous multi-agent financial intelligence system for real-time market monitoring and sentiment analysis"
readme = "README.md"
authors = [
    { name = "JC-Prog", email = "jeffrey.chong28@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
finax = "finax.main:main"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
